# TSExplorer

./: LICENSE.txt  MANIFEST.in  README.md  requirements.txt  setup.cfg  user_config.yml  user_config_audio.yml  user_config_audio_separate_files.yml  user_config_labeled_audio.yml  user_config_multimodal.yml  user_config_multiscatter.yml  user_config_video_separate_files.yml
data/: channelwise_waveforms_accelerometer_simulated_imu_data.npy  channelwise_waveforms_gyroscope_simulated_imu_data.npy  channelwise_waveforms_left_signal_simulated_data.npy  channelwise_waveforms_right_signal_simulated_data.npy  highdim_features_simulated_audio_and_video_data_multimodal.npy  highdim_features_simulated_audio_data.npy  highdim_features_simulated_audio_data_dim_reduced_pca.npy  highdim_features_simulated_audio_data_dim_reduced_tsne.npy  highdim_features_simulated_audio_data_dim_reduced_umap.npy  highdim_features_simulated_audio_data_multimodal.npy  highdim_features_simulated_audio_data_subset.npy  highdim_features_simulated_imu_data.npy  highdim_features_simulated_imu_data_dim_reduced_pca.npy  highdim_features_simulated_imu_data_dim_reduced_tsne.npy  highdim_features_simulated_imu_data_dim_reduced_umap.npy  highdim_features_simulated_signal_data_1.npy  highdim_features_simulated_signal_data_2.npy  highdim_features_simulated_video_data_multimodal.npy  highdim_features_simulated_videoclip_data.npy  id_mapping_simulated_data_multimodal.npy  simulated_audio_base_labels.npy  simulated_imu_data_precomputed_faft_indices.npy
tsexplorer/: __init__.py  app.py  backend.py  controller.py  (+7 more)
(+37 files in other folders)
