[metadata]
name = tsexplorer
version = attr: tsexplorer.__version__ 
description = Interactive data annotation and exploration GUI for time-series data

[options]
include_package_data = True

python_requires = >= 3.8, < 3.11

packages = 
   tsexplorer
   tsexplorer.cli
   tsexplorer.utils
   tsexplorer.components
   tsexplorer.extern
   tsexplorer.extern.vlc


install_requires = 
   numpy == 1.23.*
   matplotlib == 3.6.* 
   pyside6 == 6.4.*
   ruamel.yaml >= 0.15
   scipy >= 1.6
   scikit-learn == 1.2.*
   pandas == 1.5.*
   schema == 0.7.*
   pyqtgraph ==0.13.2
   resampy == 0.4.*
   umap-learn == 0.5.*
   pynndescent == 0.5.*

#[options.packages.find]
#include = cli
#exclude = assets*

[options.entry_points]
console_scripts = 
   tsexplorer = tsexplorer.cli.run:main

